fixed overlapping images issue at portfolio section

--- a/css/style.css
+++ b/css/style.css
@@ -910,9 +910,11 @@ a:focus {
 .portfolio .portfolio-img img {
     position: relative;
     width: 100%; 
+    min-height: 300px;
+    min-width: 320px;
     height: 100%; 
     object-fit: cover;
-    transform: scale(1.1);
+    /* transform: scale(1.2); */
     transition: .5s;
 }
 
